--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,9 @@
     <link href="{{ url_for('static', filename='stylesheets/styles.css') }}" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Roboto&family=Vollkorn:ital@1&display=swap" rel="stylesheet"> 
+    <link
+        href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Roboto&family=Vollkorn:ital@1&display=swap"
+        rel="stylesheet">
     <title>Mirroir connecté</title>
     <script src="https://kit.fontawesome.com/d4008cf7a0.js" crossorigin="anonymous"></script>
 </head>
@@ -15,27 +17,24 @@
 
         <div class="container">
             <div class="news">
-                <h1 style="color:{{ color }}" >Dernieres actualités:</h1>
-                <!-- <img src={{ data.listNews.news0.image }} alt={{ data.listNews.news0.title }}> -->
+                <h1 style="color:{{ color }}">Dernières actualités:</h1>
+                <h2>
+                    {{ data.listNews.news0.title }}
+                </h2>
                 <p>
-                    <!-- {{ data.listNews.news0.image }} -->
-                    {{ data.listNews.news0.title }} <br />
-                    <!-- {{ data.listNews.news0.description }} -->
-                </p>
-                <hr style="color:{{ color }}" >
-                <p>
-                    {{ data.listNews.news1.title }} <br />
-                    <!-- {{ data.listNews.news1.description }} -->
+                    {{ data.listNews.news0.description }}
                 </p>
                 <hr style="color:{{ color }}">
+                <h2>
+                    {{ data.listNews.news1.title }}
+                </h2>
                 <p>
-                    {{ data.listNews.news1.title }} <br />
-                    <!-- {{ data.listNews.news1.description }} -->
+                    {{ data.listNews.news1.description }}
                 </p>
             </div>
 
             <div class="otherInformations">
-                <p>  
+                <p>
                     <span id="datetime" style="color:{{ color }}">{{ data.datetime }}</span> <br />
                     {% if data.weather == "Nuageux" %}
                     <i class="fas fa-cloud"></i>
@@ -44,7 +43,7 @@
                     {% endif %}
                     <span id="temperature">{{ data.temperature }}°C</span>
                     <span id="humidity"></span>Humidité : {{ data.humidity }}% </span> <br />
-                    Temps de trajet pour aller au travail : {{ data.traffic }}
+                    Temps de trajet domicile-travail : {{ data.traffic }}
                 <p>
             </div>
         </div>
