--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,9 @@
                     {% endif %}
                     <span id="temperature">{{ data.temperature }}°C</span>
                     <span id="humidity"></span>Humidité : {{ data.humidity }}% </span> <br />
-                    Temps de trajet domicile-travail : {{ data.traffic }}
+                    Temps de trajet domicile-travail :<br />
+                    <i class="fas fa-route"></i>
+                    {{ data.traffic }}
                 <p>
             </div>
         </div>
